<resources>
    <string name="app_name">Remember</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string name="tv_post_write">게시글 쓰기</string>
    <string name="tv_select_category">커뮤니티를 선택해 주세요</string>

    <string name="tv_job_community">직무커뮤니티</string>
    <string name="tv_interest_community">관심사커뮤니티</string>
    <string name="rb_job_designer">\t디자이너</string>
    <string name="rb_job_marketing">\t마케팅/PR/제휴</string>
    <string name="rb_job_IT">\tIT 기획/개발/디자인</string>
    <string name="rb_job_growup">\t좋은 기획자로 성장하기</string>
    <string name="rb_interest_company">\t회사생활</string>
    <string name="rb_interest_discussion">\t모두의 토론</string>
    <string name="rb_interest_economy">\t경제/재테크</string>
    <string name="rb_interest_hobby">\t취미/여행/운동</string>
    <string name="rb_interest_career">\t이직/연봉/커리어</string>
    <string name="rb_interest_retire">\t은퇴 라이프</string>
    <string name="rb_interest_global">\t글로벌 회사 근무자</string>
    <string name="rb_interest_employee1">\t팀장 라이프</string>
    <string name="rb_interest_employee2">\t사원 라이프</string>
    <string name="rb_interest_employee3">\t대리 라이프</string>
    <string name="rb_interest_wine">\t와인과 맥주</string>
    <string name="rb_interest_fame">\t명예의 전당</string>

    <string name="tv_posting">등록</string>
    <string name="et_title">제목을 입력하세요</string>
    <string name="et_content">내용을 입력하세요</string>
    <string name="tv_posting_nickname">닉네임으로 등록</string>

    <string name="tv_designer">디자이너</string>
    <string name="tv_job_talk">직무톡</string>
    <string name="tv_nickname">닉네임</string>
    <string name="tv_part">웹 ⦁ 앱 디자인</string>
    <string name="tv_upload_time">방금 전</string>
    <string name="tv_hits">조회 0</string>
    <string name="tv_likes">좋아요 0</string>
    <string name="tv_comments">댓글 0</string>
    <string name="et_comment">닉네임님 생각은 어떠세요?</string>
</resources>