<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_dialog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/ellipse_fill_white"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            android:id="@+id/tv_category_title"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="center_vertical"
            android:text="@string/bt_category"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="@id/cl_dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_category_title"
            app:layout_constraintBottom_toBottomOf="parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_job_community"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_job_community"
                            android:textColor="@color/remember_gray3"
                            android:textSize="12sp"
                            android:layout_marginVertical="4dp"
                            android:layout_marginStart="20dp" />
                        <RadioButton
                            android:id="@+id/rb_job_designer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rb_job_designer"
                            android:textSize="16sp"
                            android:layout_marginStart="6dp"/>
                        <RadioButton
                            android:id="@+id/rb_job_marketing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rb_job_marketing"
                            android:textSize="16sp"
                            android:layout_marginStart="6dp"/>
                        <RadioButton
                            android:id="@+id/rb_job_IT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rb_job_IT"
                            android:textSize="16sp"
                            android:layout_marginStart="6dp"/>
                        <RadioButton
                        android:id="@+id/rb_job_growup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rb_job_growup"
                        android:textSize="16sp"
                        android:layout_marginStart="6dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_interest_community"
                            android:textColor="@color/remember_gray3"
                            android:textSize="12sp"
                            android:layout_marginVertical="4dp"
                            android:layout_marginStart="20dp" />


                    </RadioGroup>

            </LinearLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>